# src/api/models/ClassesGet200Response.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Backend API
+ * API documentation for the backend service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { SchoolClass } from './SchoolClass';
+import {
+    SchoolClassFromJSON,
+    SchoolClassFromJSONTyped,
+    SchoolClassToJSON,
+    SchoolClassToJSONTyped,
+} from './SchoolClass';
+
+/**
+ * 
+ * @export
+ * @interface ClassesGet200Response
+ */
+export interface ClassesGet200Response {
+    /**
+     * 
+     * @type {number}
+     * @memberof ClassesGet200Response
+     */
+    code?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ClassesGet200Response
+     */
+    message?: string;
+    /**
+     * 
+     * @type {Array<SchoolClass>}
+     * @memberof ClassesGet200Response
+     */
+    classes?: Array<SchoolClass>;
+}
+
+/**
+ * Check if a given object implements the ClassesGet200Response interface.
+ */
+export function instanceOfClassesGet200Response(value: object): value is ClassesGet200Response {
+    return true;
+}
+
+export function ClassesGet200ResponseFromJSON(json: any): ClassesGet200Response {
+    return ClassesGet200ResponseFromJSONTyped(json, false);
+}
+
+export function ClassesGet200ResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ClassesGet200Response {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'code': json['code'] == null ? undefined : json['code'],
+        'message': json['message'] == null ? undefined : json['message'],
+        'classes': json['classes'] == null ? undefined : ((json['classes'] as Array<any>).map(SchoolClassFromJSON)),
+    };
+}
+
+export function ClassesGet200ResponseToJSON(json: any): ClassesGet200Response {
+    return ClassesGet200ResponseToJSONTyped(json, false);
+}
+
+export function ClassesGet200ResponseToJSONTyped(value?: ClassesGet200Response | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'code': value['code'],
+        'message': value['message'],
+        'classes': value['classes'] == null ? undefined : ((value['classes'] as Array<any>).map(SchoolClassToJSON)),
+    };
+}
+
