# src/api/models/UpdateClassRequest.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Backend API
+ * API documentation for the backend service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UpdateClassRequest
+ */
+export interface UpdateClassRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdateClassRequest
+     */
+    name: string;
+}
+
+/**
+ * Check if a given object implements the UpdateClassRequest interface.
+ */
+export function instanceOfUpdateClassRequest(value: object): value is UpdateClassRequest {
+    if (!('name' in value) || value['name'] === undefined) return false;
+    return true;
+}
+
+export function UpdateClassRequestFromJSON(json: any): UpdateClassRequest {
+    return UpdateClassRequestFromJSONTyped(json, false);
+}
+
+export function UpdateClassRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdateClassRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+    };
+}
+
+export function UpdateClassRequestToJSON(json: any): UpdateClassRequest {
+    return UpdateClassRequestToJSONTyped(json, false);
+}
+
+export function UpdateClassRequestToJSONTyped(value?: UpdateClassRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+    };
+}
+
