# src/api/models/index.ts
@@ -4,10 +4,15 @@ export * from './AuthLoginEndPost200Response';
 export * from './AuthLoginStartPost200Response';
 export * from './AuthRegisterPost400Response';
 export * from './AuthSessionGet200Response';
+export * from './ClassesGet200Response';
+export * from './ClassesPost201Response';
+export * from './CreateClassRequest';
 export * from './LoginEndRequest';
 export * from './LoginStartRequest';
 export * from './ModelApiResponse';
 export * from './RefreshRequest';
 export * from './RegisterRequest';
+export * from './SchoolClass';
+export * from './UpdateClassRequest';
 export * from './User';
 export * from './ValidationErrorResponse';
